--- a/fyp_ecommerce/package.json
+++ b/fyp_ecommerce/package.json
@@ -8,6 +8,7 @@
     "start": "next start -p 3000"
   },
   "dependencies": {
+    "mysql2": "^3.15.3",
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
